# sotactl

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  dev-shell.sh
.github/workflows/: ci.yml
docker/: .env.dev  Dockerfile  docker-compose.yml  entrypoint.sh
scripts/: aklite-cli-example.sh
src/: cli.cpp  main.cpp
test-env/: .env.dev  docker-compose.yml
